[gd_scene load_steps=6 format=2]

[ext_resource path="res://objects/Menu.tscn" type="PackedScene" id=1]
[ext_resource path="res://objects/GameOver.gd" type="Script" id=2]
[ext_resource path="res://fonts/paragraph.tres" type="DynamicFont" id=3]
[ext_resource path="res://fonts/paragraph_bold.tres" type="DynamicFont" id=4]

[sub_resource type="Animation" id=1]
resource_name = "game_over"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("Darken:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Label_GameOver:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3, 0.45, 0.75 ),
"transitions": PoolRealArray( 1, 0.5, 2.73208, 1 ),
"update": 0,
"values": [ Vector2( 0, -32 ), Vector2( 0, 163 ), Vector2( 0, 140 ), Vector2( 0, 163 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Label_Quip:percent_visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0, 1.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Menu:rect_position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.7, 1.2 ),
"transitions": PoolRealArray( 1, 0.5, 1 ),
"update": 0,
"values": [ Vector2( 248, 380 ), Vector2( 248, 380 ), Vector2( 248, 240 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Background_Outline:rect_position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 0.196146, 1 ),
"update": 0,
"values": [ Vector2( 0, 180 ), Vector2( 0, 156 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Background_Outline:rect_size")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 0.203063, 1 ),
"update": 0,
"values": [ Vector2( 640, 0 ), Vector2( 640, 48 ) ]
}

[node name="GameOver" type="CanvasLayer"]
pause_mode = 2
layer = 100
script = ExtResource( 2 )

[node name="Darken" type="ColorRect" parent="."]
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.501961 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Menu" parent="." instance=ExtResource( 1 )]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -72.0
margin_top = 200.0
margin_right = 88.0
margin_bottom = 232.0

[node name="Background_Outline" type="ColorRect" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
color = Color( 0.34902, 0.337255, 0.321569, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background_Fill" type="ColorRect" parent="Background_Outline"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 1.0
margin_bottom = -1.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label_GameOver" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -320.0
margin_top = -212.0
margin_bottom = -200.0
rect_scale = Vector2( 2, 2 )
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color_shadow = Color( 0.133333, 0.12549, 0.203922, 1 )
custom_constants/shadow_offset_x = 1
custom_constants/shadow_offset_y = 1
text = "Game Over"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label_Quip" type="Label" parent="."]
anchor_right = 1.0
margin_top = 182.0
margin_bottom = 197.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0.517647, 0.494118, 0.529412, 1 )
custom_colors/font_color_shadow = Color( 0.133333, 0.12549, 0.203922, 1 )
custom_constants/shadow_offset_x = 1
custom_constants/shadow_offset_y = 1
text = "How unromantic."
align = 1
percent_visible = 0.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/game_over = SubResource( 1 )
[connection signal="button_pressed" from="Menu" to="." method="_on_Menu_button_pressed"]
